# django-4-by-example-4th-edition

./: .gitignore  pyproject.toml
mysite/blog/: admin.py  models.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment_comment_blog_commen_created_0e6ed4_idx.py  0004_post_tags.py
mysite/blog/templates/blog/: base.html
mysite/blog/templates/blog/post/: detail.html  list.html  search.html
mysite/mysite/: settings.py  urls.py
